<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="HardcodedText,MissingConstraints,Autofill"
    tools:layoutDirection="rtl"
    tools:padding="4dp"
    tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <EditText
        android:id="@+id/user_details_name"
        style="@style/EditText.White"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_fillname"
        android:imeOptions="actionNext"
        android:textSize="22dp"
        android:autoSizeMaxTextSize="16sp"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeTextType="uniform"
        android:inputType="textPersonName"
        android:nextFocusForward="@id/user_details_phone"/>

    <EditText
        android:id="@+id/user_details_phone"
        style="@style/EditText.White"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:digits="1234567890"
        android:textSize="22dp"
        android:autoSizeMaxTextSize="16sp"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeTextType="uniform"
        android:hint="@string/hint_phone"
        android:imeOptions="actionNext"
        android:inputType="phone"
        android:maxLength="10"
        android:nextFocusForward="@id/user_details_email"/>

    <EditText
        android:id="@+id/user_details_email"
        style="@style/EditText.White"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/hint_email"
        android:textSize="22dp"
        android:autoSizeMaxTextSize="16sp"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeTextType="uniform"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:nextFocusForward="@id/user_details_street"/>

    <TextView
        android:id="@+id/user_details_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/adress_for_shipping"
        android:textSize="18dp"
        android:textStyle="bold"
        android:layout_gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
    <EditText
        android:id="@+id/user_details_street"
        style="@style/EditText.White"
        android:layout_width="0dp"
        android:layout_weight="6"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:hint="@string/street"
        android:imeOptions="actionNext"
        android:textSize="22dp"
        android:autoSizeMaxTextSize="16sp"
        android:autoSizeMinTextSize="10sp"
        android:autoSizeTextType="uniform"
        android:nextFocusForward="@id/user_details_street_number"/>

    <EditText
        android:id="@+id/user_details_street_number"
        style="@style/EditText.White"
        android:layout_width="0dp"
        android:layout_weight="4"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:hint="@string/hint_number_house"
        android:imeOptions="actionNext"
        android:inputType="number"
        android:textSize="22dp"
        android:autoSizeMaxTextSize="16sp"
        android:autoSizeMinTextSize="10sp"
        android:autoSizeTextType="uniform"
        android:layout_marginStart="10dp"
        android:nextFocusForward="@id/user_details_entrance_code"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

    <EditText
        android:id="@+id/user_details_entrance_code"
        style="@style/EditText.White"
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="18dp"
        android:autoSizeMaxTextSize="16sp"
        android:autoSizeMinTextSize="10sp"
        android:autoSizeTextType="uniform"
        android:hint="@string/hint_entry_code"
        android:imeOptions="actionNext"
        android:nextFocusForward="@id/user_details_apartment"
        app:autoSizeMaxTextSize="18dp"
        app:autoSizeMinTextSize="12dp"
        app:autoSizeTextType="uniform"/>

    <EditText
        android:id="@+id/user_details_apartment"
        style="@style/EditText.White"
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:digits="1234567890"
        android:gravity="center"
        android:hint="@string/hint_apartment_number"
        android:imeOptions="actionNext"
        android:inputType="number"
        android:textSize="18dp"
        android:autoSizeMaxTextSize="16sp"
        android:autoSizeMinTextSize="10sp"
        android:autoSizeTextType="uniform"
        android:nextFocusForward="@id/user_details_floor"/>

    <EditText
        android:id="@+id/user_details_floor"
        style="@style/EditText.White"
        android:layout_width="0dp"
        android:layout_weight="2"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:digits="1234567890"
        android:hint="@string/hint_floor"
        android:imeOptions="actionNext"
        android:inputType="number"
        android:textSize="18dp"
        android:autoSizeMaxTextSize="16sp"
        android:autoSizeMinTextSize="10sp"
        android:autoSizeTextType="uniform"
        android:nextFocusForward="@id/user_details_city"/>

    </LinearLayout>
    <EditText
        android:id="@+id/user_details_city"
        style="@style/EditText.White"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/hint_city"
        android:textSize="22dp"
        android:autoSizeMaxTextSize="16sp"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeTextType="uniform"
        android:imeOptions="actionDone"/>
    </LinearLayout>
</merge>