<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    style="@style/Dialog">

    <ImageView
        android:id="@+id/smile_image"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="25dp"
        android:src="@drawable/image_happy"
        android:contentDescription="@null"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"/>


    <TextView
        android:id="@+id/dialog_item_meal_added_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:textSize="16sp"
        android:autoSizeMaxTextSize="22sp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:layout_below="@id/smile_image"
        android:fontFamily="@font/heebo_light"
        android:contentDescription="Excellent! Product selected"
        tools:text="@string/meal_item_added_text"
        />

    <LinearLayout
        android:id="@+id/dialog_meals_buttons_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_below="@id/dialog_item_meal_added_text"
        android:orientation="horizontal"
        android:visibility="gone"
        tools:visibility="visible">

        <TextView
            android:id="@+id/dialog_meal_cancel"
            style="@style/Button.GrayWithGrayText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="15dp"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:layout_weight="1"
            android:contentDescription="I'm done, thanks! Button"
            android:text="@string/thank_you_finish"
            android:textSize="16sp"
            />

        <TextView
            android:id="@+id/dialog_meal_confirm"
            style="@style/Button.BlueWithBlueText"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="15dp"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:contentDescription="Yes thank you! Button"
            android:text="@string/yes_thank_you"
            android:textSize="16sp"
            />

    </LinearLayout>
</RelativeLayout>